Tue Feb 07 18:31:58 1995 Chris Provenzano (proven@mit.edu)

	* krb5.tex Documented API changes to krb5_get_in_tkt*() routines
		and added krb5_get_in_tkt_with_keytab(). The explanation of
		each of these routines still needs appropriate changes.

Thu Feb 02 22:59:41 1995  Chris Provenzano (proven@mit.edu)

	* krb5.tex Documented change of krb5_enctype to krb5_enctypes
		to krb5_send_tgs().

	* krb5.tex Documented added krb5_keytype arg to (*keyproc)() arg
		for krb5_rd_req(), krb5_rd_req_decoded(), and krb5_recvauth().

Fri Jan 27 22:15:23 1995  Chris Provenzano (proven@mit.edu)

	* keytab.tex Documented added krb5_keytab argunment to 
		krb5_kt_read_service_key() and krb5_kt_get_entry().

Mon Nov 21 14:17:50 1994  Theodore Y. Ts'o  (tytso@dcl)

	* library.tex (internalfunc): Define \internalfunc, which prints a
		disclaimer in front of "internal functions".  We should
		move them somewhere else, but for now, let's start marking
		those functions which we believe are internal.

	* krb5.tex: Documented changed interfaces to krb5_encode_kdc_rep
		and krb5_encrypt_tkt_part.  Document krb5_encode_kdc_rep,
		krb5_decode_kdc_rep, krb5_encrypt_tkt_part,
		krb5_decrypt_tkt_part, and krb5_send_tgs as all internal
		functions.  

Thu Oct 13 13:14:48 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5.tex: Fixed typo; extra space in \funcname{ krb5_recvauth}.

Wed Oct 12 02:03:37 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile: Added better dependencies to do two-pass latex runs
		automatically.  Make "make clean" clean up the tex temp
		files. 

