@@ -1,8 +1,10 @@
 .SUFFIXES: .tex .dvi .ps
 
+SHELL=/bin/sh
+
 STYLES=changebar.sty fixunder.sty functions.sty
 LIBTEX= library.tex intro.tex tables.tex errors.tex krb5.tex ccache.tex \
-	rcache.tex keytab.tex libos.tex library.ind
+	rcache.tex keytab.tex libos.tex 
 
 DESTEX= libdes.tex
 
@@ -13,25 +15,21 @@ libdes.dvi: $(DESTEX) $(STYLES)
 
 library.ps: library.dvi
 
-# hard to capture two-pass semantics in Makefiles...
-# library.ind: library.dvi
-library.ind: library.idx
-	index library.idx
-
-library.idx: 
-	touch library.ind
-	latex library.tex
-	rm library.ind
-
 clean:
-	rm -f *.toc *.log *.idx *.ind *.aux
+	rm -f *.toc *.log *.idx *.ind *.aux lib1.stamp
 
 really-clean: clean
 	rm -f *.dvi *.ps
 
 
-library.dvi:  $(LIBTEX) $(STYLES)
+library.dvi:  lib1.stamp $(LIBTEX) $(STYLES)
+	latex library
 
+lib1.stamp: $(LIBTEX) $(STYLES)
+	touch library.ind
+	latex library
+	index library.idx
+	date > lib1.stamp
 
 .tex.dvi:
 	latex $*
